feat: 完善 1.8.8 对局功能与兼容性